--- a/demo-2/pom.xml
+++ b/demo-2/pom.xml
@@ -32,8 +32,13 @@
 		<dependency>
 	        <groupId>com.google.code.gson</groupId>
 	        <artifactId>gson</artifactId>
-	        <version>2.8.1</version>
 	    </dependency>
+	    <!-- fastJson -->
+	    <dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.7</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
@@ -57,6 +62,12 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.15</version>
 		</dependency>
+		
+		<!-- httpclient -->
+		<dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -95,6 +106,12 @@
             <artifactId>quartz</artifactId>
             <version>2.2.1</version>
         </dependency>
+        <!-- common-lang -->
+        <dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
