--- a/demo-2/pom.xml
+++ b/demo-2/pom.xml
@@ -62,6 +62,15 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.15</version>
 		</dependency>
+		<!-- activeMq -->
+		<dependency>  
+            <groupId>org.springframework.boot</groupId>  
+            <artifactId>spring-boot-starter-activemq</artifactId>  
+        </dependency> 
+        <!-- <dependency>  
+            <groupId>org.apache.activemq</groupId>  
+            <artifactId>activemq-pool</artifactId>  
+        </dependency> -->
 		
 		<!-- httpclient -->
 		<dependency>
