--- a/demo-2/src/main/resources/application-pro.properties
+++ b/demo-2/src/main/resources/application-pro.properties
@@ -1,7 +1,7 @@
-#\u8bbf\u95ee\u7aef\u53e3
-server.port=8080
+#server port
+server.port=7070
 
-#\u6570\u636e\u6e90
+#datasource
 spring.datasource.name=kenhome
 spring.datasource.url=jdbc\:mysql\://localhost\:3306/world?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false
 spring.datasource.username=root
@@ -26,13 +26,13 @@ spring.datasource.maxOpenPreparedStatements=20
 mybatis.mapper-locations=classpath:mapping/*.xml
 mybatis.type-aliases-package=com.example.model
 
-#pagehelper\u5206\u9875\u63d2\u4ef6\u914d\u7f6e
+#pagehelper
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 
-#\u65e5\u5fd7\u6587\u4ef6
+# log file path
 logging.file=./springboot.log
 
 #redis
@@ -55,3 +55,43 @@ spring.redis.pool.min-idle=0
 # \u8fde\u63a5\u8d85\u65f6\u65f6\u95f4\uff08\u6beb\u79d2\uff09
 spring.redis.timeout=3000
 
+#activeMq
+spring.activemq.broker-url=tcp://127.0.0.1:61616
+#spring.activemq.close-timeout=15s 
+spring.activemq.in-memory=true 
+spring.activemq.non-blocking-redelivery=false
+spring.activemq.password=123456
+spring.activemq.send-timeout=0
+spring.activemq.user=haha
+#spring.activemq.packages.trust-all=
+#spring.activemq.packages.trusted=
+#spring.activemq.pool.block-if-full=true
+#spring.activemq.pool.block-if-full-timeout=-1ms
+#spring.activemq.pool.create-connection-on-startup=true
+#spring.activemq.pool.enabled=false 
+#spring.activemq.pool.expiry-timeout=0ms
+#spring.activemq.pool.idle-timeout=30s
+#spring.activemq.pool.max-connections=1
+#spring.activemq.pool.maximum-active-session-per-connection=500
+#spring.activemq.pool.reconnect-on-exception=true
+#spring.activemq.pool.time-between-expiration-check=-1ms
+#spring.activemq.pool.use-anonymous-producers=true
+
+#thymyleaf
+#spring.thymeleaf.prefix=classpath:/templates/  
+#spring.thymeleaf.suffix=.html  
+#spring.thymeleaf.mode=HTML5  
+#spring.thymeleaf.encoding=UTF-8  
+# ;charset=<encoding> is added  
+#spring.thymeleaf.content-type=text/html  
+# set to false for hot refresh  
+spring.thymeleaf.cache=false  
+
+
+# multipart file
+# upload file  enable
+spring.http.multipart.enabled=true
+#single file max size
+spring.http.multipart.max-file-size=5MB
+# sum all file max size
+spring.http.multipart.max-request-size=10MB
