--- a/demo-2/src/main/resources/application-dev.properties
+++ b/demo-2/src/main/resources/application-dev.properties
@@ -22,6 +22,8 @@ spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
 spring.datasource.poolPreparedStatements=true
 spring.datasource.maxOpenPreparedStatements=20
+#\u914d\u7f6e\u76d1\u63a7\u7edf\u8ba1\u62e6\u622a\u7684filters\uff0c\u53bb\u6389\u540e\u76d1\u63a7\u754c\u9762sql\u5c06\u65e0\u6cd5\u7edf\u8ba1,'wall'\u7528\u4e8e\u9632\u706b\u5899
+spring.datasource.filters=stat, wall, log4j
 #mybatis
 mybatis.mapper-locations=classpath:mapping/*.xml
 mybatis.type-aliases-package=com.example.model
