--- a/demo-2/src/main/resources/application-dev.properties
+++ b/demo-2/src/main/resources/application-dev.properties
@@ -3,9 +3,9 @@ server.port=7070
 
 #datasource
 spring.datasource.name=kenhome
-spring.datasource.url=jdbc\:mysql\://localhost\:3306/world?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false
+spring.datasource.url=jdbc\:mysql\://120.79.35.34\:3306/test?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=chenmeikai2018
 #druid
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
