--- a/demo-2/src/main/resources/application-dev.properties
+++ b/demo-2/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ server.port=7070
 #datasource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.name=kenhome
-spring.datasource.url=jdbc\:mysql\://120.79.35.34\:3306/test?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://120.79.35.34:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=chenmeikai2018
 #druid
