虚拟路径映射 error page配置

--- a/demo-2/src/main/resources/application-dev.properties
+++ b/demo-2/src/main/resources/application-dev.properties
@@ -1,5 +1,7 @@
 #server port
 server.port=7070
+#server.context-path=/springboot
+server.tomcat.uri-encoding=UTF-8
 
 #datasource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -98,3 +100,5 @@ spring.http.multipart.enabled=true
 spring.http.multipart.max-file-size=1MB
 # sum all file max size
 spring.http.multipart.max-request-size=10MB
+
+
