--- a/demo-2/src/main/resources/application-dev.properties
+++ b/demo-2/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 #server port
 server.port=7070
 #server.context-path=/springboot
-server.tomcat.uri-encoding=UTF-8
+#server.tomcat.uri-encoding=UTF-8
 
 #datasource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
