添加告警注解

--- a/demo-2/src/main/resources/application-dev.properties
+++ b/demo-2/src/main/resources/application-dev.properties
@@ -28,8 +28,8 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 spring.datasource.useGlobalDataSourceStat=true
 
 #mybatis
-mybatis.mapper-locations=classpath:mapping/*.xml
-mybatis.type-aliases-package=com.example.model
+mybatis.mapper-locations=classpath:**/mapping/*.xml
+mybatis.type-aliases-package=com.**.model
 
 #pagehelper
 pagehelper.helperDialect=mysql
