--- a/demo-2/src/main/resources/application-dev.properties
+++ b/demo-2/src/main/resources/application-dev.properties
@@ -28,7 +28,7 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 spring.datasource.useGlobalDataSourceStat=true
 
 #mybatis
-mybatis.mapper-locations=classpath:**/mapping/*.xml
+mybatis.mapper-locations=classpath:**/mapping/*.xml,classpath:resources/mapping/*.xml
 mybatis.type-aliases-package=com.**.model
 
 #pagehelper
