--- a/demo-2/pom.xml
+++ b/demo-2/pom.xml
@@ -16,12 +16,12 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.10.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
-	</parent>
+	</parent> 
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
+		<java.version>1.8</java.version> 
 	</properties>
 
 	<dependencies>
@@ -129,6 +129,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<!-- alarm -->
+		<dependency>
+			<groupId>com.inesv</groupId>
+			<artifactId>alarm</artifactId>
+			<version>1.0</version>   
 		</dependency>
 	</dependencies>
 
